src/objects/Loop_Media__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <label>Asset Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <description>Categories and Subcategories assigned to Media. Subcategories are formatted &quot;Category | Subcategory Item&quot;</description>
        <inlineHelpText>Categories and Subcategories assigned to Media.</inlineHelpText>
        <label>Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description (Plain Text)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>The date the media was/is to be made unavailable for viewing</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formatted_Description__c</fullName>
        <description>The same text as the Description. This field, however, contains any original styling and formatting</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Groups__c</fullName>
        <description>Groups assigned to Media. Used for access permission based on the Loop_Groups__c on User</description>
        <label>Groups</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Loop_Link__c</fullName>
        <description>The equivalent of Loop&apos;s Universal Link.</description>
        <inlineHelpText>The equivalent of Loop&apos;s Universal Link.</inlineHelpText>
        <label>Internal Loop Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Externally_Shareable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the Media can be shared to users outside of Loop. If true, an External link should be populated</description>
        <inlineHelpText>Whether or not the Media can be shared to users outside of Loop.</inlineHelpText>
        <label>Is Externally Shareable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Id of the Media record in the Loop system</description>
        <externalId>true</externalId>
        <inlineHelpText>The Id of the Media record in the Loop system</inlineHelpText>
        <label>Loop Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <description>The date the media was/is to be made available for viewing</description>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shareable_Link__c</fullName>
        <description>The equivalent of Loop&apos;s External Link.</description>
        <inlineHelpText>The equivalent of Loop&apos;s External Link.</inlineHelpText>
        <label>Shareable Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sort_Title__c</fullName>
        <description>Field that Contains up to the first 255 characters of the Title so the title can be sorted by</description>
        <label>Sort Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title of the media</description>
        <label>Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audio</fullName>
                </value>
                <value>
                    <fullName>Course</fullName>
                </value>
                <value>
                    <fullName>Excel Document</fullName>
                </value>
                <value>
                    <fullName>Interactive</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Word Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loop Media</label>
    <nameField>
        <displayFormat>LM-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loop Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>